err/products.upfrontcontacts.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/UpfrontContacts'...
Listing './lib/python3.5/site-packages/Products/UpfrontContacts/Extensions'...
Compiling './lib/python3.5/site-packages/Products/UpfrontContacts/Extensions/Install.py'...
***   File "./lib/python3.5/site-packages/Products/UpfrontContacts/Extensions/Install.py", line 64
    raise RuntimeError, (
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/UpfrontContacts/browser'...
Listing './lib/python3.5/site-packages/Products/UpfrontContacts/debian'...
Listing './lib/python3.5/site-packages/Products/UpfrontContacts/profiles'...
Listing './lib/python3.5/site-packages/Products/UpfrontContacts/profiles/default'...
Listing './lib/python3.5/site-packages/Products/UpfrontContacts/skins'...
Listing './lib/python3.5/site-packages/Products/UpfrontContacts/skins/upfrontcontacts'...
Compiling './lib/python3.5/site-packages/Products/UpfrontContacts/skins/upfrontcontacts/constructBatch.py'...
***   File "./lib/python3.5/site-packages/Products/UpfrontContacts/skins/upfrontcontacts/constructBatch.py", line 13
    return batch
               ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/UpfrontContacts/skins/upfrontcontacts/get_companies_and_people.py'...
***   File "./lib/python3.5/site-packages/Products/UpfrontContacts/skins/upfrontcontacts/get_companies_and_people.py", line 21
    return result
                ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/UpfrontContacts/skins/upfrontcontacts/make_vcard.py'...
***   File "./lib/python3.5/site-packages/Products/UpfrontContacts/skins/upfrontcontacts/make_vcard.py", line 128
    return "\r\n".join(vcard)
                            ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/UpfrontContacts/skins/upfrontcontacts/parse_vcard.py'...
***   File "./lib/python3.5/site-packages/Products/UpfrontContacts/skins/upfrontcontacts/parse_vcard.py", line 83
    return map
             ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/UpfrontContacts/utils.py'...
***   File "./lib/python3.5/site-packages/Products/UpfrontContacts/utils.py", line 35
    raise LookupError, 'Unknown encoding "%s"' % encoding
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products.UpfrontContacts-0.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
